--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-pdf/renderer": "^3.4.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@wojtekmaj/react-hooks": "^1.19.0",
+    "lodash": "^4.17.21",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +20,7 @@
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
