--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-pdf/renderer": "^3.4.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@wojtekmaj/react-hooks": "^1.19.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "lucide-react": "^0.368.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-pdf": "^7.7.1",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "react-resizable-panels": "^2.0.17",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "use-resize-observer": "^9.1.0",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.0",
@@ -27,6 +40,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
