--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-resizable-panels": "^2.0.17",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "to-words": "^4.0.1",
     "use-resize-observer": "^9.1.0",
     "usehooks-ts": "^3.1.0"
   },
