--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-pdf": "^7.7.1",
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^2.0.17",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "to-words": "^4.0.1",
