--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-pdf/renderer": "^3.4.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@wojtekmaj/react-hooks": "^1.19.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
