--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@wojtekmaj/react-hooks": "^1.19.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "geist": "^1.3.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.368.0",
