--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-pdf/renderer": "^3.4.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@vercel/speed-insights": "^1.1.0",
     "@wojtekmaj/react-hooks": "^1.19.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -33,7 +34,7 @@
     "next": "14.1.3",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.4.1",
     "react-dom": "^18",
     "react-pdf": "^7.7.1",
     "react-redux": "^9.1.0",
