--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "next": "14.1.3",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-day-picker": "^9.4.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-pdf": "^7.7.1",
     "react-redux": "^9.1.0",
